04_DevKuber/03_KuberAdm/13.01_PoDepSrv/files/prod/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: keqpup232/backend:1.1
          name: backend
          ports:
            - containerPort: 9000
              name: backend
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: keqpup232/frontend:1.1
          name: frontend
          ports:
            - containerPort: 80
              name: frontend
      restartPolicy: Always
