04_DevKuber/03_KuberAdm/13.01_PoDepSrv/files/prod/Endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: external-api
subsets:
  - addresses:
      - ip: 138.197.231.124 # api.publicapis.org
    ports:
      - port: 443
